# QTrack

./: .gitignore  .pre-commit-config.yaml  AEW_TRACKING_CODE.py  AEW_module.py  COMPUTE_SAVE_CURV_VORT_NON_DIV_UPDATE_FIX_PARALLEL.py  DEVELOPMENT.md  LICENSE  README.md  REQUIRED_MODULES  REQUIRED_MODULES.md  SAVE_CURV_VORT_SHELL_NON_DIV.py  environment-dev.yml  example_MERRA2_tracking.py  example_tracking.ipynb  example_tracking.py  make_dummy_nc_files.ipynb  non_divergent_wind.py  pyproject.toml  run_tracker.sh
.github/workflows/: ci.yml
.ipynb_checkpoints/: AEW_TRACKING_CODE-checkpoint.py  AEW_postprocessing-checkpoint.py  COMPUTE_SAVE_CURV_VORT_NON_DIV_UPDATE-checkpoint.py  SAVE_CURV_VORT_SHELL_NON_DIV-checkpoint.py  wind_combine-checkpoint.py
CURV_VORT/HELMHOLTZ/: wind_700_helmholtz.nc.REMOVED.git-id
EXAMPLE_DATA/: wind_season_lowres_700_2010_global.nc.REMOVED.git-id
MISC/: AEW_postprocessing_OLD_UPDATED.py  COMPUTE_SAVE_CURV_VORT_NON_DIV_UPDATE.py  curv_vort_create_and_combine_for_kelly.ipynb  non_divergent_wind_old.py  plot_AEW_and_wind.ipynb
TOOLS/: wind_combine.py
qtrack/: __init__.py  core.py  curvvort.py  nondivwind.py  postproc.py  postproc_OLD.py  prep_data.ipynb  requirements.txt  tracking.py
shell_script/: AEW_TRACKING_CODE.py  AEW_module.py  AEW_postprocessing.py  COMPUTE_SAVE_CURV_VORT_NON_DIV_UPDATE_FIX_PARALLEL.py  SAVE_CURV_VORT_SHELL_NON_DIV.py  non_divergent_wind.py  run_tracker.sh
shell_script/curv_vort/GIF/: .gitkeep
tests/: test_qtrack.py
