[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "qtrack"
authors = [
    {name = "qlawton", email = "qlawton@ucar.edu"},
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = "~=3.8"
dependencies = [
    "cartopy",
    "dill",
    "imageio",
    "joblib",
    "matplotlib",
    "netCDF4",
    "numpy",
    "pandas",
    "scikit-learn",
    "scipy",
    "tropycal",
    "xarray",
]

[project.urls]
Home = "https://github.com/qlawton/QTrack"

[tool.ruff]
target-version = "py38"
line-length = 255  # FIXME

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "B028",  # explicit `stacklevel` in `warnings.warn`
]
